flask_server.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: flask-backend
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server
  namespace: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: flask-server
  template:
    metadata:
      labels:
        name: flask-server
    spec:
      containers:
        - name: flask-server
          image: xasag94215/flask-celery-microservice
          ports:
            - containerPort: 5000
              name: rest
---
# service
apiVersion: v1
kind: Service
metadata:
  name: flask-server
  namespace: flask-backend
spec:
  selector:
    name: flask-server
  ports:
    - port: 80
      targetPort: rest
