manifests.yaml
# flask server
## deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: flask-server
  template:
    metadata:
      labels:
        name: flask-server
    spec:
      containers:
        - name: flask-server
          image: xasag94215/flask-celery-microservice
          ports:
            - containerPort: 5000
              name: rest
---
## service
apiVersion: v1
kind: Service
metadata:
  name: flask-server
spec:
  selector:
    name: flask-server
  ports:
    - port: 80
      targetPort: rest
---
# celery workers
## deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      name: celery-worker
  template:
    metadata:
      labels:
        name: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: xasag94215/flask-celery-microservice
          command:
            - "bash"
            - "-c"
            - "celery -A main.celery worker -l info"
---
