postgres.yaml
---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
# deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: postgres
  labels:
    name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgresql
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      containers:
        - image: postgres:9.6.2-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
---
# service
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgres
  labels:
    name: postgresql
spec:
  ports:
    - port: 5432
  selector:
    name: postgresql
---
